[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
description = "An experiment inspired by https://matklad.github.io/2019/11/16/a-better-shell.html"
documentation = "https://docs.rs/polyp"
edition = "2018"
homepage = "https://github.com/arzg/polyp"
license = "MIT OR Apache-2.0"
name = "polyp"
readme = "README.md"
repository = "https://github.com/arzg/polyp"
version = "0.4.0"

[dependencies]
serde = {version = "1", features = ["derive"]}
